examples/test/testpolicy15420.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15420
  namespace: namespace83
spec:
  podSelector:
    matchLabels:
      key47: value38
      key16: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value32
      podSelector:
        matchLabels:
          key12: value47
          key47: value1
